Fix not showing selection in file selector
We were using a way-to-broad CSS selector like ".view" which
also affected the file selector. Remove this and instead apply
the (already also matched) boxes-bg style class on the .view
places that needed to match.

https://bugzilla.gnome.org/show_bug.cgi?id=673850

--- a/data/gtk-style.css
+++ b/data/gtk-style.css
@@ -43,7 +43,6 @@ BoxesMiniGraph {
     font-weight: bold;
 }
 
-.view,
 GtkClutterOffscreen,
 .boxes-bg {
     background-color: transparent;
